--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -23,10 +23,14 @@ body {
   line-height: var(--line-height-chinese);
 }
 
+* {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 :global(body .root) {
   padding-left: var(--padding-lr);
   padding-right: var(--padding-lr);
-  // margin: 0 auto;
   width: 100%;
   min-width: var(--screen-minest-width);
 }
@@ -109,10 +113,12 @@ input[disabled] {
     :global(.ant-confirm-title) {
       font-weight: var(--font-weight-bold);
     }
+
     :global(.ant-confirm-content) {
-      color: rgba(0, 0, 0, .65);
+      color: rgba(0, 0, 0, 0.65);
       font-weight: var(--font-weight-normal);
     }
+
     :global(.ant-confirm-btns .ant-btn) {
       padding: 4px 11px;
       width: 56px;
@@ -165,7 +171,7 @@ input[disabled] {
   }
 
   :global(.ant-pagination-item-active) {
-    background-color: rgba(90, 158, 226, .2);
+    background-color: rgba(90, 158, 226, 0.2);
 
     & > a {
       color: var(--color-blue);
@@ -201,6 +207,7 @@ input[disabled] {
   :global(.ant-calendar-last-month-cell) & {
     color: rgba(0, 0, 0, 0.65);
   }
+
   :global(.ant-calendar-disabled-cell) & {
     color: #bcbcbc;
     background-color: transparent;
@@ -247,7 +254,7 @@ a {
   cursor: pointer;
   text-decoration: none;
   // color: var(--color-blue);
-  color: #005ED9;
+  color: #005ed9;
 }
 
 /*
