--- a/src/pages/appManagement/list/index.css
+++ b/src/pages/appManagement/list/index.css
@@ -10,12 +10,59 @@
 @import '../../../components/variables.css';
 
 .root {
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 1400px;
+  margin: 24px auto;
+  background-color: #fff;
+  overflow: hidden;
+  min-height: 600px;
 }
 
 .container {
   margin: 0 auto;
-  padding: 0 0 40px;
-  max-width: var(--max-content-width);
+  padding: 0 37px 32px 37px;
+  overflow: hidden;
+}
+
+.subNavBar {
+  margin-top: 16px;
+  border-bottom: 1px solid var(--color-grey);
+  overflow: hidden;
+}
+
+.navTabs {
+  float: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  font-size: var(--font-small);
+}
+
+.tab {
+  position: relative;
+  line-height: 56px;
+  cursor: pointer;
+  color: #404040;
+}
+
+.tab:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
+  transition: width .2s ease;
+  background-color: var(--color-red);
+}
+
+.active {
+  color: var(--color-red);
+  font-weight: var(--font-weight-bolder);
+  cursor: auto;
+}
+
+.active::after {
+  width: 100%;
 }
