应用列表页未传值

--- a/src/pages/appManagement/list/index.css
+++ b/src/pages/appManagement/list/index.css
@@ -84,7 +84,15 @@
   border-radius: 2px;
 }
 
+.queryCondition {
+  display: inline-block;
+}
+
 .select {
   display: inline-block;
   margin-left: 16px;
+}
+
+.list {
+  margin-top: 24px;
 }
