--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -28,7 +28,7 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-:global(body .root) {
+:global(body) :global(.root) {
   padding-left: var(--padding-lr);
   padding-right: var(--padding-lr);
   width: 100%;
@@ -38,7 +38,7 @@ body {
 /**
   * 全局 table header 背景色
   */
-:global(.ant-table-thead > tr > th) {
+:global(.ant-table-thead) > :global(tr) > :global(th) {
   background-color: var(--color-header-grey) !important;
   border-color: var(--color-grey);
 }
@@ -64,7 +64,7 @@ input[disabled] {
 /**
  * 全局 antd 组件圆角设置
  */
-:global(.ant-select .ant-select-selection),
+:global(.ant-select) :global(.ant-select-selection),
 :global(.ant-input),
 :global(.ant-btn) {
   border-radius: var(--border-radius-base);
@@ -97,7 +97,7 @@ input[disabled] {
     padding: 24px;
   }
 
-  :global(.ant-modal-footer .ant-btn) {
+  :global(.ant-modal-footer) :global(.ant-btn) {
     font-weight: var(--font-weight-normal);
 
     &:not(:first-child) {
@@ -119,7 +119,7 @@ input[disabled] {
       font-weight: var(--font-weight-normal);
     }
 
-    :global(.ant-confirm-btns .ant-btn) {
+    :global(.ant-confirm-btns) :global(.ant-btn) {
       padding: 4px 11px;
       width: 56px;
       height: 28px;
