切换广告位、样式、尺寸等设置相应默认值

--- a/src/pages/appManagement/new/adSlot/index.css
+++ b/src/pages/appManagement/new/adSlot/index.css
@@ -160,6 +160,10 @@
             cursor: pointer;
           }
         }
+
+        :global(.ant-pagination) {
+          display: none;
+        }
       }
     }
   }
@@ -257,5 +261,19 @@
 
   .down {
     top: 15px;
+  }
+}
+
+.wordNum {
+
+  .wordWrap {
+    display: inline-block;
+    position: relative;
+
+    .wordTip {
+      position: absolute;
+      top: 5px;
+      right: -32px;
+    }
   }
 }
