--- a/src/pages/appManagement/new/adSlot/index.css
+++ b/src/pages/appManagement/new/adSlot/index.css
@@ -277,3 +277,10 @@
     }
   }
 }
+
+.tableTitle {
+  font-family: PingFangSC-Medium;
+  font-size: 12px;
+  color: #404040;
+  line-height: 16px;
+}
